# datasette-alerts

./: .gitignore  AGENTS.md  Justfile  NOTES  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml
datasette_alerts/: __init__.py  alert_type.py  bg_task.py  destinations.py  handlers.py  hookspecs.py  internal_db.py  internal_migrations.py  models.py  notifier.py  page_data.py  router.py  routes.py  template.py  trigger_db.py
datasette_alerts/frontend/targets/alerts/: index.tsx
datasette_alerts/static/alerts/: index.min.js
datasette_alerts/templates/: alerts_base.html  tmp.html
examples/: README.md  ntfy.py
examples/federal-register/: Justfile  README.md  cli.py
examples/florida-power/: .gitignore  Makefile  Untitled-1.ipynb
examples/houston-traffic/: .gitignore  Justfile  Makefile  README.md  Untitled-1.ipynb  backlog.sql
examples/sample-notifiers/: desktop.py  discord.py  ntfy.py  send_message_demo.py  slack.py
examples/sample-notifiers/static/datasette-alerts-discord/: config.js
examples/send-message-demo/: __init__.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/lib/: ConfigElementLoader.svelte  NotifierConfigFields.svelte  TimeAgo.svelte
frontend/src/lib/template-editor/: TemplateEditor.svelte  VariableMenu.svelte  schema.ts
frontend/src/pages/alert_detail/: AlertDetailPage.svelte  index.ts
frontend/src/pages/alerts_list/: AlertsListPage.svelte  index.ts
frontend/src/pages/destinations/: DestinationsPage.svelte  (+1 more)
scripts/: typegen-pagedata.py
tests/: test_alerts.py  test_custom_alerts.py
(+6 files in other folders)
