[project]
name = "datasette-alerts"
version = "0.0.1a7"
description = "Setup alerts on specfic new records."
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a19",
    "datasette-plugin-router>=0.0.1a2",
    "datasette-vite>=0.0.1a1",
    "pydantic>=2",
    "python-ulid>=3",
    "sqlite-migrate>=0.1b0",
    "sqlite-utils>=3.38",
    "wtforms>=3.2.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/datasette/datasette-alerts"
Changelog = "https://github.com/datasette/datasette-alerts/releases"
Issues = "https://github.com/datasette/datasette-alerts/issues"
CI = "https://github.com/datasette/datasette-alerts/actions"

[project.entry-points.datasette]
alerts = "datasette_alerts"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_alerts = ["static/**/*", "templates/*", "manifest.json"]

[tool.setuptools.packages.find]
exclude = [
    "frontend",
]